trabajando con json/server

--- a/verCitas.html
+++ b/verCitas.html
@@ -190,20 +190,8 @@
                                         <div class="p-4 border-bottom">
                                             <h4 class="title mb-0"> LISTA DE CITAS </h4>
                                         </div>
-                                        <div class="row">
+                                        <div id="caja" class="row">
                                             <div class="col-12 col-sm-6 col-md-4 p-4 ">
-                                                <div class="alert alert-white border shadow-sm mb-0" role="alert">
-                                                    <h4 class="alert-heading">Shado</h4>
-                                                    <p>Aww yeah, you successfully read this important alert message. This example text is going to run a bit longer so that you can see how spacing within an alert works with this kind of content.</p>
-                                                    <div class="mb-0 border-top pt-3">
-                                                        <a class="btn btn-sm btn-danger">
-                                                             <i class="bi bi-trash"></i>
-                                                        </a>
-                                                        <a href="editarCita.html" class="btn btn-sm btn-warning">
-                                                            <i class="bi bi-pencil-square"></i>
-                                                       </a>
-                                                    </div>
-                                                </div>
                                             </div>
                                            
                                         </div>
@@ -288,8 +276,9 @@
         <script src="assets/js/apexcharts.min.js"></script>
         <!-- Main Js -->
         <script src="assets/js/plugins.init.js"></script>
-        <script src="assets/js/app.js"></script>
-        
+
+        <script src="./app/app.js" type="module"></script>
+
     </body>
 
 </html>
